// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-responsive-table/Prop group-header-style Any 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sortable m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Id
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Email
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Date of birth
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Phone number
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-any"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Title
              </div>
               
              <div>
                Professor's name
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-any"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large add-class-to-icon"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                ANI-1101
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Motion design
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--is-disabled m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-disabled m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-any"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-disabled m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1103
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design I
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-any"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1104
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design II
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table/Prop group-header-style Dark 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sortable m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Id
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Email
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Date of birth
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Phone number
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-dark"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Title
              </div>
               
              <div>
                Professor's name
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-dark"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large add-class-to-icon"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                ANI-1101
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Motion design
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--is-disabled m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-disabled m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-dark"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-disabled m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1103
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design I
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-dark"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1104
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design II
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table/Prop group-header-style Light 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sortable m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Id
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Email
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Date of birth
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Phone number
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Title
              </div>
               
              <div>
                Professor's name
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large add-class-to-icon"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                ANI-1101
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Motion design
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--is-disabled m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-disabled m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-disabled m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1103
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design I
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1104
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design II
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;
